Fix navbar brand icon vertical alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,12 @@ body {
 /* Aligner le logo de la navbar avec le contenu */
 .navbar .navbar-brand {
     margin-left: 0.5rem;
+    display: flex;
+    align-items: center;
+}
+
+.navbar .navbar-brand i {
+    line-height: 1;
 }
 
 
